fixed spacing of character input count

--- a/client/style/components.scss
+++ b/client/style/components.scss
@@ -87,6 +87,11 @@
     display: inline-block;
     padding: 0 2px;
   }
+  .text-limiter {
+    font-size: 14px;
+    margin-top: -16px;
+    margin-bottom: 1.65em;
+  }
 }
 .media-input-group {
   border-radius: 0px;
